# typesynth

./: .gitignore  LICENSE  build.gradle.kts  extension.properties  settings.gradle.kts
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/exec/: main.cpp
src/main/cpp/src/ghidralib/: com_angelod_typesynth_AnalyzerBridge.cc  com_angelod_typesynth_AnalyzerBridge.h  serialization.h
src/main/cpp/src/tsanalyze/: models.h  tsanalyze.cc  tsanalyze.h
src/main/kotlin/com/angelod/typesynth/: AnalyzerBridge.kt  TypesynthPluginPackage.kt
